# Repo-Radar-Plan

./: reporadar_implementation_plan.md  reporadar_spec_sheet.md
reporadar/: .gitignore  CLAUDE.md  PROGRESS.md  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  run.sh
reporadar/core/: __init__.py  editor.py  models.py  presets.py  result_parser.py  rg_runner.py  settings.py
reporadar/tests/: test_result_parser.py  test_rg_runner.py
reporadar/ui/: __init__.py  main_window.py  preview_pane.py  results_view.py  search_worker.py
