[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reporadar"
version = "0.1.0"
description = "A lightweight GUI wrapper around ripgrep for fast codebase search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
reporadar = "reporadar.app:main"

[tool.setuptools.packages.find]
include = ["reporadar*"]

[tool.pytest.ini_options]
testpaths = ["reporadar/tests"]
python_files = ["test_*.py"]
